--- a/404.html
+++ b/404.html
@@ -243,7 +243,7 @@
     </p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="https://jhiyan.github.io/">Go To Homepage</a>
+		<a class="border-button" href="https://Jhiyan.gitee.io/">Go To Homepage</a>
 		<a class="border-button" href="mailto:example">Report A Problem</a>
 	</div>
 </div>
